# tem-staining-comparison

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
Notebooks/: environment.yml  ferritin-fourier-analysis.ipynb  ferritin-synthetic-data.ipynb
Notebooks/Data/Processed/Lc/: Lc-01_cropped.tif  Lc-01_cropped_raps.csv
Notebooks/Data/Processed/NanoV/: NanoV-01_cropped.tif  NanoV-01_cropped_raps.csv  NanoV-02_cropped.tif  NanoV-02_cropped_raps.csv  NanoV-03_cropped.tif  NanoV-03_cropped_raps.csv  NanoV-04_cropped.tif  NanoV-04_cropped_raps.csv
Notebooks/Data/Processed/NanoW/: NanoW-01_cropped.tif  NanoW-01_cropped_raps.csv  NanoW-02_cropped.tif  NanoW-02_cropped_raps.csv  NanoW-03_cropped.tif  NanoW-03_cropped_raps.csv  NanoW-04_cropped.tif  NanoW-04_cropped_raps.csv  NanoW-05_cropped.tif  NanoW-05_cropped_raps.csv
Notebooks/Data/Processed/PTA/: PTA-01_cropped.tif  PTA-01_cropped_raps.csv  PTA-02_cropped.tif  PTA-02_cropped_raps.csv  PTA-03_cropped.tif  PTA-03_cropped_raps.csv
Notebooks/Data/Processed/Stain77/: Stain77-01_cropped.tif  Stain77-01_cropped_raps.csv  Stain77-02_cropped.tif  Stain77-02_cropped_raps.csv  Stain77-03_cropped.tif  Stain77-03_cropped_raps.csv
Notebooks/Data/Processed/SyntheticData/: SyntheticData-seed1005901700.tif  SyntheticData-seed1005901700_raps.csv  SyntheticData-seed1481806539.tif  SyntheticData-seed1481806539_raps.csv  SyntheticData-seed152886334.tif  SyntheticData-seed152886334_raps.csv  (+14 more)
src/tem-staining/: spectral_analysis.py  synthetic_data.py
src/tem_staining/: synthetic_data.py
(+112 files in other folders)
